testsuite/tests/grammar/invalid_lkt/several_main_rules.lkt
import lexer_example

grammar foo_grammar {
    @main_rule main_rule1 <- Example("example")
    @main_rule main_rule2 <- Example("example")
}
